# badword-backend

./: .env.dev  docker-compose.yml  pyproject.toml
app/: config.py
app/api/: __main__.py
app/api/controllers/: __init__.py  authentication.py  user.py  word.py
app/api/dependencies/: authentication.py  database.py
app/api/schems/: __init__.py  word.py
app/domain/: admin.py
app/dto/: __init__.py  base.py  types.py  word.py
app/infrastructure/database/alembic/versions/: 49784a0ef5a8_init.py  7cf7b742f83f_init.py
app/infrastructure/database/dao/: holder.py
app/infrastructure/database/dao/rdb/: __init__.py  base.py  user.py  word.py
app/infrastructure/database/models/: __init__.py  base.py  word.py
app/tgbot/: __main__.py
app/tgbot/dialogs/: __init__.py
app/tgbot/dialogs/create_word/: dialogs.py  handlers.py
app/tgbot/dialogs/info/: __init__.py  dialogs.py
app/tgbot/dialogs/menu/: dialogs.py
app/tgbot/dialogs/words/: dialogs.py  getters.py
app/tgbot/handlers/commands/: start.py
app/tgbot/middlewares/: database.py
app/tgbot/states/: __init__.py  states.py
