[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["uicodee <uicodee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
pytz = "^2024.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
greenlet = "^3.0.3"
alembic = "^1.13.1"
black = "^24.3.0"
aiogram = "^3.4.1"
python-dotenv = "^1.0.1"
aiogram-dialog = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
